--- a/src/typings-for-css-modules-loader/package.json
+++ b/src/typings-for-css-modules-loader/package.json
@@ -14,9 +14,13 @@
   "devDependencies": {
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "autoprefixer": "^9.4.7",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3",
     "typings-for-css-modules-loader": "^1.7.0",
